- added extra permgen space for crappy build machine