@@ -116,6 +116,9 @@
         <artifactId>cargo-maven2-plugin</artifactId>
         <configuration>
           <wait>false</wait>
+          <properties>
+             <cargo.jvmargs>-XX:MaxPermSize=256m -Xmx1536m</cargo.jvmargs>
+          </properties>
           <container>
             <containerId>jetty6x</containerId>
             <type>embedded</type>
